Fixed text alignment in selector toggles

--- a/src/styles/calendar/_calendar.sass
+++ b/src/styles/calendar/_calendar.sass
@@ -35,6 +35,7 @@ $dropdown-menu-shadow: 0px 2px 4px 0px rgba(166, 171, 189, 0.40), 0px 0px 2px 0p
 
     span
       width: 246px
+      text-align: left
 
     .vertical-line
       width: 1px
